# MinecraftConsoles

./: .clang  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  COMPILE.md  CONTRIBUTING.md  MAP.md  MinecraftConsoles.sln  README.md  arcconv.py  build.bat  compile_commands.json  docker-compose.dedicated-server.ghcr.yml  docker-compose.dedicated-server.yml  legacytitle.bbmodel  mychanges.patch  start-dedicated-server.sh  yo.patch
Minecraft.Client/: AbstractContainerScreen.cpp  AbstractProjectileDispenseBehavior.cpp  AbstractProjectileDispenseBehavior.h  AbstractTexturePack.cpp  AbstractTexturePack.h  AchievementPopup.cpp  AchievementScreen.cpp  AchievementScreen.h  ArchiveFile.cpp  ArchiveFile.h  ArrowRenderer.cpp  ArrowRenderer.h  BatModel.cpp  BatRenderer.cpp  BatRenderer.h  BeaconRenderer.cpp  BlazeModel.cpp  BlazeRenderer.cpp  BlazeRenderer.h  BoatRenderer.cpp  BoatRenderer.h  BookModel.cpp  BossMobGuiInfo.cpp  BreakingItemParticle.cpp  BubbleParticle.cpp  BufferedImage.cpp  BufferedImage.h  CMakeLists.txt  Camera.cpp  Camera.h  ChatScreen.cpp  ChestRenderer.cpp  ChickenModel.cpp  ChickenRenderer.cpp  ChickenRenderer.h  Chunk.cpp  Chunk.h  ClientConnection.cpp  ClientConnection.h  ClientConstants.cpp  (+308 more)
Minecraft.Client/Common/: App_Defines.h  App_enums.h  App_structs.h  BuildVer.h  C4JMemoryPool.h  C4JMemoryPoolAllocator.h  ConsoleGameMode.cpp  ConsoleGameMode.h  Consoles_App.cpp  Consoles_App.h
Minecraft.Client/Common/Audio/: BinkDecoder.cpp  BinkDecoder.h  Consoles_SoundEngine.cpp  Consoles_SoundEngine.h  MusicTrackManager.cpp  MusicTrackManager.h  SoundEngine.cpp  SoundEngine.h  miniaudio.h  stb_vorbis.h
Minecraft.Client/Common/Colours/: ColourTable.cpp
Minecraft.Client/Common/DLC/: DLCAudioFile.cpp  DLCAudioFile.h  DLCColourTableFile.cpp  DLCGameRules.h  DLCGameRulesHeader.cpp  DLCGameRulesHeader.h  DLCLocalisationFile.cpp  DLCManager.cpp  DLCManager.h  DLCPack.cpp  DLCSkinFile.cpp  DLCSkinFile.h
Minecraft.Client/Common/Filesystem/: Filesystem.cpp
Minecraft.Client/Common/GameRules/: AddEnchantmentRuleDefinition.cpp  AddItemRuleDefinition.cpp  ApplySchematicRuleDefinition.cpp  BiomeOverride.cpp  CollectItemRuleDefinition.cpp  CompleteAllRuleDefinition.cpp  CompoundGameRuleDefinition.cpp  ConsoleGameRulesConstants.h  ConsoleGenerateStructure.cpp  ConsoleGenerateStructure.h  ConsoleSchematicFile.cpp  ConsoleSchematicFile.h  GameRuleDefinition.cpp  GameRuleDefinition.h  GameRuleManager.cpp  GameRuleManager.h  LevelGenerationOptions.cpp  LevelGenerationOptions.h  LevelRuleset.cpp  NamedAreaRuleDefinition.cpp  StartFeature.cpp  StartFeature.h  UpdatePlayerRuleDefinition.cpp  UseTileRuleDefinition.cpp  UseTileRuleDefinition.h  XboxStructureActionGenerateBox.cpp  XboxStructureActionPlaceBlock.cpp  XboxStructureActionPlaceContainer.cpp  XboxStructureActionPlaceSpawner.cpp
Minecraft.Client/Common/Leaderboards/: LeaderboardInterface.cpp  LeaderboardManager.cpp  SonyLeaderboardManager.cpp  SonyLeaderboardManager.h
Minecraft.Client/Common/Media/: LaunchMoreOptionsMenu1080.swf  LaunchMoreOptionsMenu480.swf  LaunchMoreOptionsMenu720.swf  LaunchMoreOptionsMenuVita.swf  MainMenu1080.swf  MainMenu480.swf  MainMenu720.swf  MainMenuVita.swf  SettingsGraphicsMenu1080.swf  SettingsGraphicsMenu480.swf  SettingsGraphicsMenu720.swf  SettingsOptionsMenu1080.swf  SettingsOptionsMenu480.swf  SettingsOptionsMenu720.swf  SettingsOptionsMenuSplit1080.swf  SettingsOptionsMenuSplit720.swf  SettingsOptionsMenuVita.swf  SettingsUIMenu1080.swf  SettingsUIMenu720.swf  languages.loc  skinHDOrbis.swf  skinPS3.swf  skinWin.swf
Minecraft.Client/Common/Network/: GameNetworkManager.cpp  GameNetworkManager.h  PlatformNetworkManagerInterface.h  PlatformNetworkManagerStub.cpp  PlatformNetworkManagerStub.h  SessionInfo.h
Minecraft.Client/Common/Telemetry/: TelemetryManager.cpp  TelemetryManager.h
Minecraft.Client/Common/Trial/: TrialMode.cpp  TrialMode.h
Minecraft.Client/Common/Tutorial/: AreaConstraint.cpp  AreaHint.cpp  ChangeStateConstraint.cpp  ChoiceTask.cpp  CompleteUsingItemTask.cpp  ControllerTask.cpp  CraftTask.cpp  DiggerItemHint.cpp  EffectChangedTask.cpp  FullTutorial.cpp  FullTutorialMode.cpp  HorseChoiceTask.cpp  InfoTask.cpp  LookAtEntityHint.h  LookAtTileHint.cpp  ProcedureCompoundTask.h  RideEntityTask.cpp  StatTask.cpp  TakeItemHint.cpp  Tutorial.cpp  TutorialHint.cpp  TutorialMode.cpp  TutorialMode.h  UseItemTask.cpp  UseTileTask.cpp  XuiCraftingTask.cpp  XuiCraftingTask.h
Minecraft.Client/Common/UI/: IUIScene_AbstractContainerMenu.cpp  IUIScene_AbstractContainerMenu.h  IUIScene_AnvilMenu.cpp  IUIScene_AnvilMenu.h  IUIScene_BeaconMenu.cpp  IUIScene_BeaconMenu.h  IUIScene_BrewingMenu.cpp  (+140 more)
Minecraft.Client/Durango/: Durango_App.cpp  Durango_App.h  Durango_Minecraft.cpp  Durango_UIController.cpp  Durango_UIController.h  XboxGameMode.h
Minecraft.Client/DurangoMedia/: strings.h
Minecraft.Client/Orbis/: Orbis_App.cpp  Orbis_App.h  Orbis_Minecraft.cpp  Orbis_PlayerUID.cpp  Orbis_UIController.cpp  Orbis_UIController.h  user_malloc.cpp
Minecraft.Client/OrbisMedia/: strings.h
Minecraft.Client/PS3/: PS3_App.cpp  PS3_App.h  PS3_Minecraft.cpp  PS3_PlayerUID.cpp  PS3_UIController.cpp  PS3_UIController.h  XboxGameMode.cpp  XboxGameMode.h  Xbox_Minecraft.cpp
Minecraft.Client/PSVita/: PSVita_App.cpp  PSVita_App.h  PSVita_Minecraft.cpp  PSVita_PlayerUID.cpp  PSVita_UIController.cpp  PSVita_UIController.h
Minecraft.Client/Windows64/: KeyboardMouseInput.cpp  KeyboardMouseInput.h  Win64LanguageRuntime.h  Windows64_App.cpp  Windows64_App.h  Windows64_DInputManager.cpp  Windows64_DInputManager.h  Windows64_Minecraft.cpp  Windows64_NameXuid.h  Windows64_UIController.cpp  Windows64_UIController.h  Windows64_Xuid.h
Minecraft.Client/Windows64Media/: strings.h
Minecraft.Client/Xbox/: MinecraftWindows.rc  Xbox_App.cpp  Xbox_App.h  Xbox_Minecraft.cpp  Xbox_UIController.cpp  Xbox_UIController.h  targetver.h
Minecraft.Client/XboxMedia/: 4J_strings.h  strings1.h
Minecraft.Client/cmake/: AssetCopyTargets.cmake  Common.cmake  CopyAssets.cmake  ORBIS.cmake  PS3.cmake  Xbox360.cmake
(+1125 files in other folders)
